# Guardrails

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bench-smoke  Dockerfile.py314  Dockerfile.test-py314  Makefile  PERFORMANCE_PLAN.md  PERFORMANCE_ROADMAP.md  PYTHON314_OPTIMISATIONS.md  debug_streaming.py  doc-agent.yaml  index.html  objects.inv  pyproject.toml  rails-config-presentation.md  search.html  test_streaming_adhoc.py  tox.ini  triage_report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: _test-py314.yml  _test.yml  docs-build.yaml  full-tests.yml  latest-deps-tests.yml  lint.yml  perf.yml  pr-tests.yml  publish-pypi-approval.yml  release.yml  test-and-build-wheel.yml  thread-safety.yml
agents/: __init__.py
agents/doc_improvement_agent/: README.md  __init__.py  __main__.py  agent.py  change_detector.py  config.py  models.py  pr_generator.py  rule_router.py
api/: nemoguardrails.embeddings.basic.html
benchmarks/: __init__.py  bench_optimizations.py  bench_py314_advantages.py  bench_threading.py  bench_threadpool_vs_inline.py  compare.py  conftest.py  dashboard.py  fake_provider.py  fake_rails.py  results-py310-baseline.json  run_import.py  run_latency.py  run_memory.py  run_streaming.py  run_throughput.py  scenarios.py
colang-2/getting-started/: index.html
colang-2/language-reference/: make-use-of-llms.html  working-with-variables-and-expressions.html
develop/: LIVE_DOCS.html  LIVE_DOCS.json  README.html  faqs.html  getting-started.html  glossary.html  index.html  index.json  objects.inv  release-notes.html  research.html  research.json  search.html  searchindex.js  troubleshooting.html  troubleshooting.json
develop/_modules/: index.html
develop/_static/: documentation_options.js
develop/about/: how-it-works.html  how-it-works.json  overview.html  overview.json  rail-types.html  rail-types.json  release-notes.html  release-notes.json  supported-llms.html  supported-llms.json  use-cases.html
develop/api/: README.html  nemoguardrails.context.html  nemoguardrails.embeddings.basic.html  nemoguardrails.embeddings.index.html  nemoguardrails.rails.llm.config.html  nemoguardrails.rails.llm.llmrails.html  nemoguardrails.streaming.html
develop/architecture/: README.html  index.html
develop/cli/: index.html
develop/colang-2/: index.html  overview.html  whats-changed.html
develop/configure-rails/: before-configuration.html  before-configuration.json  configuration-reference.html  configuration-reference.json  exceptions.html  exceptions.json  guardrail-catalog.html  guardrail-catalog.json  index.html  index.json  overview.html  overview.json
develop/deployment/: index.html  index.json  using-docker.html  using-docker.json  using-microservice.html  using-microservice.json
develop/evaluation/: README.html  evaluate-guardrails.html  evaluate-guardrails.json  index.html  llm-vulnerability-scanning.html  llm-vulnerability-scanning.json
develop/getting-started/: README.html  index.html  installation-guide.html  installation-guide.json  integrate-into-application.html  integrate-into-application.json  (+1 more)
docs/: conf.py  faqs.md  glossary.md  index.md  parallel-rail-execution.md  performance-improvements.md  performance-optimization-plan.md  performance-research.md  python-3.14-migration.md  troubleshooting.md
nemoguardrails/: __init__.py  _langchain_compat.py  _otel_compat.py  _thread_safety.py  buffer.py  context.py  exceptions.py  streaming.py  utils.py
perf_baselines/: README.md  linux-py312.json  linux-py314.json  linux-py314t.json
qa/: Dockerfile.qa
tests/: test_action_dispatcher_advanced.py  test_actions_llm_utils.py  test_actions_output_mapping.py  test_activefence_rail.py  test_ai_defense.py  test_api.py  test_architecture.py  test_autoalign.py  test_autoalign_factcheck.py  test_batch_embeddings.py  test_buffer_strategy.py  test_cache_embeddings.py  test_cache_lfu.py  test_callbacks.py  test_clavata.py  test_config_advanced.py  test_config_validation.py  test_content_safety_integration.py  test_coverage_gaps.py  test_crowdstrike_aidr_guard.py  test_dag_scheduler.py  test_dag_scheduler_advanced.py  test_embeddings_fastembed.py  test_event_validation.py  test_fact_checking.py  test_fiddler_rails.py  test_filters.py  test_guardrails_ai_integration.py  test_injection_detection.py  test_jailbreak_model_based.py  test_jailbreak_nim.py  test_langchain_compat.py  test_llama_guard.py  test_llm_call_parameter_mapping.py  test_llm_isolation.py  test_llm_options.py  test_llm_task_manager.py  test_llm_task_manager_multimodal.py  test_llmrails.py  test_llmrails_reasoning_output_rails.py  (+35 more)
user-guides/: guardrails-library.html  guardrails-process.html  llm-support.html
v0.14.0/: getting-started.html  glossary.html
v0.14.1/: index.html
v0.17.0/: release-notes.html
v0.19.0-rc0/: README.html  faqs.html  getting-started.html  glossary.html  index.html  release-notes.html  research.html  search.html
v0.21.0-rc0/: LIVE_DOCS.html  LIVE_DOCS.json  index.html  index.json  research.html  research.json  search.html  troubleshooting.html  troubleshooting.json
(+17602 files in other folders)
