[project]
name = "nemoguardrails"
version = "0.18.0"
description = "NeMo Guardrails is an open-source toolkit for easily adding programmable guardrails to LLM-based conversational systems."
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "NVIDIA", email = "nemoguardrails@nvidia.com" }]


classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "aiohttp (>=3.10.11)",
  "annoy (>=1.17.3)",
  "fastapi (>=0.121.0)",
  "starlette (>=0.49.1)",
  "uvicorn (>=0.23)",
  "typer (>=0.8)",
  "fastembed (>=0.2.2,<=0.6.0)",
  "httpx (>=0.24.1)",
  "jinja2 (>=3.1.6)",
  "langchain (>=0.2.14,<2.0.0)",
  "langchain-core (>=0.2.14,<2.0.0)",
  "langchain-community (>=0.2.5,<2.0.0)",
  "lark (>=1.1.7)",
  "nest-asyncio (>=1.5.6)",
  "prompt-toolkit (>=3.0)",
  "protobuf (>=5.29.5)",
  "pydantic (>=1.10)",
  "pyyaml (>=6.0)",
  "rich (>=13.5.2)",
  "simpleeval (>=0.9.13)",
  "watchdog (>=3.0.0)",
]

[project.optional-dependencies]

tracing = ["opentelemetry-api (>=1.27.0,<2.0.0)", "aiofiles (>=24.1.0)"]

openai = ["langchain-openai (>=0.2.0)"]


sdd = [
  "presidio-analyzer (>=2.2) ; python_version<'3.13'",
  "presidio-anonymizer (>=2.2) ; python_version<'3.13'",
]

nvidia = ["langchain-nvidia-ai-endpoints (>=0.3.0)"]

gcp = ["google-cloud-language (>=2.14.0)", "protobuf (>=5.29.5)"]

jailbreak = ["yara-python (>=4.5.1)"]

# eval
eval = [
  "tqdm (>=4.65,<5.0)",
  "streamlit (>=1.37.0)",
  "tornado (>=6.5.0)",
  "pandas (>=1.4.0,<3)",
  "protobuf (>=5.29.5)",
  "numpy",
]

all = [
  "presidio-analyzer (>=2.2) ; python_version<'3.13'",
  "presidio-anonymizer (>=2.2) ; python_version<'3.13'",
  "tqdm (>=4.65,<5.0)",
  "streamlit (>=1.37.0)",
  "tornado (>=6.5.0)",
  "pandas (>=1.4.0,<3)",
  "protobuf (>=5.29.5)",
  "numpy",
  "langchain-openai (>=0.2.0)",
  "google-cloud-language (>=2.14.0)",
  "opentelemetry-api (>=1.27.0,<2.0.0)",
  "aiofiles (>=24.1.0)",
  "langchain-nvidia-ai-endpoints (>=0.3.0)",
  "yara-python (>=4.5.1)",
]

[tool.poetry]
packages = [{ include = "nemoguardrails" }]

include = [
  "LICENSE.md",
  "LICENSE-Apache-2.0.txt",
  "LICENCES-3rd-party.txt",
  "chat-ui/**/*",
  "examples/**/*",
  "eval/data/**/*",
  "**/*.yml",
  "**/*.co",
  "**/*.txt",
  "**/*.json",
  "**/*.lark",
]


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "0.14.6"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
pyright = "^1.1.405"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.2.2"
pytest-asyncio = ">=0.21.0, <1.0.0"
pytest-cov = ">=4.1.0"
pytest-httpx = ">=0.22.0"
pytest-profiling = "^1.7.0"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]
aioresponses = ">=0.7.6"
streamlit = ">=1.37.0"
tox = "^4.23.2"
yara-python = "^4.5.1"
opentelemetry-api = "^1.34.1"
opentelemetry-sdk = "^1.34.1"


[tool.poetry.group.dev]
optional = true
include-groups = ["test", "test_integration", "lint", "typing"]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.1.1"

# Directories in which to run Pyright type-checking
[tool.pyright]
include = [
  "nemoguardrails/rails/**",
  "nemoguardrails/actions/**",
  "nemoguardrails/llm/**",
  "nemoguardrails/embeddings/**",
  "nemoguardrails/cli/**",
  "nemoguardrails/kb/**",
  "nemoguardrails/logging/**",
  "nemoguardrails/tracing/**",
  "nemoguardrails/server/**",
  "tests/test_callbacks.py",
]
exclude = [
  "nemoguardrails/llm/providers/trtllm/**",
  "nemoguardrails/llm/providers/_langchain_nvidia_ai_endpoints_patch.py",
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
sphinx-reredirects = "<0.2"
sphinx = "<=7.5"
myst-parser = "<=5"
sphinx-copybutton = "<=0.6"
nvidia-sphinx-theme = { version = ">=0.0.8", python = ">=3.10" }


[tool.pytest.ini_options]
addopts = "-p no:warnings"
log-level = "DEBUG"

# The flag below should only be activated in special debug sessions
# i.e. the test hangs and we need to see what happened up to that point.
# There are some race conditions with how the logging streams are closed in the teardown
# phase, which will cause tests to fail or "magically" ignored.
log_cli = "False"

[project.scripts]
nemoguardrails = "nemoguardrails.__main__:app"

[project.urls]
homepage = "https://github.com/NVIDIA-NeMo/Guardrails"
issues = "https://github.com/NVIDIA-NeMo/Guardrails/issues"
changelog = "https://github.com/NVIDIA-NeMo/Guardrails/blob/develop/CHANGELOG.md"
documentation = "https://docs.nvidia.com/nemo/guardrails/"
repository = "https://github.com/NVIDIA-NeMo/Guardrails"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
